# CPPUAL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SHORT_LICENSE  cmake
cmake/: AddQtAndroidApk.cmake  AndroidManifest.xml.in  CompilerConfig.cmake  FindDL.cmake  FindEGL.cmake  FindFreetype  FindFreetype.cmake  FindGLEW  FindGLEW.cmake  FindOpenAL  FindOpenAL.cmake  FindOpenCL  FindOpenCL.cmake  FindOpenGL.cmake  FindSndFile.cmake  FindSockets.cmake  FindVulkan.cmake  FindWM.cmake  Package.cmake  ToolChain  ToolChainConfig.cmake  android.toolchain.cmake  cpp14defs  ios-info.plist.in
include/Vulkan/: vk.h
include/cppual/: abi  abi.h  array_map  array_map.h  audio  bigint  bigint.h  bitfield.h  bitflags  bitset.h  byte  byte.h  callable.h  cast.h  casts  circular_queue  circular_queue.h  common.h  concepts  concepts.h  containers  containers.h  coroutines.h  csv_parser  decl  decl.h  delegate.h  dom_parser  error.h  exception  filesystem_directory  filesystem_file  filesystem_watcher  flags.h  fn_meta.h  forward  forward.h  func.h  function.h  functional  (+74 more)
include/cppual/compute/: backend_iface.h  behaviour.h  bridge.h  clmemory.h  clobject.h  context.h  cv.h  device.h  devmemory.h  devsurface.h  devtask.h  gl_interop.h  mutex.h  object.h  platform.h  pll_ops.h  plltask.h  program.h  task.h  thread.h  unbound_matrix.h
include/cppual/concept/: concepts.h
include/cppual/coroutines/: coroutines.h
include/cppual/db/: model.h
include/cppual/dom/: cmdline.h  csv.h  doc.h  dom.h  exceptions.h  ini_parser.h  json.h  json_parser.h  pdf.h  ptree.h  ptree_fwd.h  ptree_serialization.h  stream_translator.h  string_path.h  xml.h  xml_parser.h
include/cppual/dom/detail/: exception_implementation.h  file_parser_error.h  ptree_implementation.h  ptree_utils.h  rapidxml.h  xml_parser_error.h  xml_parser_flags.h  xml_parser_read_rapidxml.h  xml_parser_write.h
include/cppual/dom/json_parser/: error.h
include/cppual/exceptions/: exception.h  functional_exception.h  memory_exception.h
include/cppual/fibers/: fibers.h
include/cppual/filesystem/: directory.h  directory_watcher.h  file.h
include/cppual/gfx/: color.h  coord.h  draw.h  dsp_details.h  font.h  matrix.h
include/cppual/gfx/drawable/: elipse.h  image.h  line.h  painter.h  polygon.h  rectangle.h  shape.h  text.h
include/cppual/gfx/formats/: bmp.h
include/cppual/gfx/gl/: batch.h  buffer.h  egl.h  elipse.h  ext.h  framebuf.h  glbase.h  gldef.h  glsl.h  instance.h  line.h  (+9 more)
include/cppual/input/: event.h  joystick.h  keyboard.h  pointer.h
include/cppual/interfaces/: layers.h  unbound_interface.h
include/cppual/iterators/: bi_iterator.h  bitset_iterator.h  rope_iterator.h  tuple_iterator.h
include/cppual/json/: allocators.h  cursorstreamwrapper.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  json.h  json_adaptor.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
include/cppual/memory/: allocator.h  collector.h  devmemory.h  gc.h  heap.h  linear.h  memory.h  mop.h  page.h  pool.h  shared.h  stack.h  stacked.h  static.h  system.h
include/cppual/mqtt/: client.h  message.h
include/cppual/network/: address.h  packet.h  uri.h
include/cppual/platform/: events.h  manager.h  wm.h
include/cppual/process/: details.h  interproc.h  interprocess.h  module.h  pipe.h  plugin.h  proc_model.h  process_model.h
include/cppual/stream/: iobase.h
include/cppual/system/: clock.h  sysinfo.h
include/cppual/ui/: animation.h  cmd.h  composite.h  default_events.h  dialog.h  display.h  events.h  frame.h  groups.h  hotkey.h  layout.h  manager.h  queue.h  skin.h  uimgr.h  view.h  vsurface.h  window.h  wm.h
include/glad/: glad.h
src/: interface.cpp  unbound_interface.cpp
src/compute/: backend.cpp  backend.h  backend_iface.cpp  behaviour.cpp  bridge.cpp  cldef.h  clmemory.cpp  clobject.cpp  context.cpp  cv.cpp  device.cpp  devmemory.cpp  devsurface.cpp  devtask.cpp  gl_interop.cpp  mutex.cpp  object.cpp  opencl.cpp  plltask.cpp  program.cpp  task.cpp  thread.cpp
src/compute/backend/: opencl.cpp  opencl.h  vulkan.cpp
src/dom/: csv.cpp  xml.cpp
src/gfx/: color.cpp  draw.cpp  font.cpp  matrix.cpp
src/gfx/drawable/: elipse.cpp  image.cpp  line.cpp  painter.cpp  polygon.cpp  rectangle.cpp  text.cpp
src/gfx/formats/: bmp.cpp
src/gfx/gl/: batch.cpp  buffer.cpp  egl.cpp  elipse.cpp  ext.cpp  framebuf.cpp  glad.c  glad.h  glbase.cpp  gldef.h  glsl.cpp  instance.cpp  line.cpp  painter.cpp  polygon.cpp  query.cpp  rectangle.cpp  runtime.cpp  surface.cpp  text.cpp  texture.cpp  vbo.cpp
src/input/: event.cpp  joystick.cpp  keyboard.cpp  pointer.cpp
src/interfaces/: layers.cpp  unbound_interface.cpp
src/json/: json_adaptor.cpp
src/memory/: allocator.cpp  collector.cpp  devmemory.cpp  gc.cpp  heap.cpp  linear.cpp  memory.cpp  page.cpp  pool.cpp  shared.cpp  stack.cpp  stacked.cpp  system.cpp
src/memory/os/: aix.h  android.h  bsd.h  ios.h  linux.h  mac.h  solaris.h  win.h
src/mqtt/: client.cpp  message.cpp
src/multimedia/audio/: device.cpp  sound.cpp  spatial.cpp
src/network/: address.cpp  packet.cpp  uri.cpp
src/network/protocols/: http.cpp  p2p.cpp  protocol.cpp  server_protocol.cpp
src/network/transport/: socket.cpp  tcp.cpp  tcpclient.cpp  tcplistener.cpp  udp.cpp
src/platform/: display.cpp  events.cpp  manager.cpp
src/platform/wayland/: wlbackend.cpp  wlsurface.cpp
src/platform/winapi/: wbackend.cpp
src/platform/xorg/: xbackend.cpp  xbackend.h  xinput.h  xmain.cpp  xsurface.cpp  xsurface.h
src/process/: interproc.cpp  interprocess.cpp  module.cpp  plugin.cpp  proc_model.cpp  process_model.cpp
src/system/: sysinfo.cpp
src/ui/: animation.cpp  composite.cpp  dialog.cpp  display.cpp  events.cpp  frame.cpp  hotkey.cpp  layout.cpp  manager.cpp  queue.cpp  skin.cpp  uimgr.cpp  view.cpp  vsurface.cpp  window.cpp
src/ui/controls/: button.cpp  label.cpp  popup.cpp
src/ui/dialogs/: msgdlg.cpp
tests/: cppual_test.cpp  memory_test.cpp  sizeof.cpp
(+153 files in other folders)
